Changelog for zest.releaser
===========================

2.9 (unreleased)
----------------

- Ümläüts in a changelog don't break the logger anymore.  [reinout]


2.8 (2009-08-27)
----------------

- Fixed the release command when used in a french environment.
  In French "svn info" returns 'URL :', not 'URL:'.
  [vincentfretin]


2.7 (2009-07-08)
----------------

- Before asking setup.py for its version or name, first run egg_info,
  as that may get rid of some warnings that otherwise end up in the
  extracted version or name, like UserWarnings.
  [maurits]


2.6 (2009-05-25)
----------------

- Small change: the questions don't print a newline anymore after the question
  (and before the user pressed enter).  This makes it clearer if enter has
  been pressed yet.  Suggestion by jkolman.  [reinout]


2.5 (2009-05-20)
----------------

- Revert to previous behaviour: when a package has not been released
  yet on pypi, decline to register it: the first time should be
  deliberate and manual, to avoid accidentally uploading client
  packages to pypi.
  [maurits]


2.4 (2009-05-15)
----------------

- Factored release.py out into a new pypi.py, solving a few possible
  problems with missing or misconfigured .pypirc files.  [maurits]


2.3 (2009-05-11)
----------------

- Fixed release script when the .pypirc file does not contain a
  distutils section or that section does not contain a index-servers
  option.  [maurits]


2.2 (2009-05-11)
----------------

- postrelease: suggestion for next version after 1.1.19 is not
  1.1.110, but 1.1.20.  [maurits]

- Make it work with collective.dist (mregister/mupload) [WouterVH]
  see http://plone.org/documentation/tutorial/how-to-upload-your-package-to-plone.org/installing-collective.dist


2.1 (2009-04-09)
----------------

- Fix lasttagdiff command to work with Mercurial by truncating the '+'
  character from the revision id, since that only indicates uncommitted
  changes exist.
